Added media query for collapse offcanvas menu

--- a/css/offcanvas.css
+++ b/css/offcanvas.css
@@ -29,6 +29,25 @@ body {
   }
 }
 
+@media (max-width: 575.98px) {
+  .offcanvas-collapse {
+    position: fixed;
+    top: 56px; /* Height of navbar */
+    bottom: 0;
+    width: 100%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    overflow-y: auto;
+    background-color: #fff;
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+}
+
+
 .nav-scroller {
   position: relative;
   z-index: 2;
